2005-04-30  Richard Levitte  <richard@levitte.org>

	* contrib/monotone-nav.el (mnav-rev-make): Move it so it's defined
	after the definition of the macro mnav-rev-id.  Otherwise, the
	byte compiler complains there is no setf method for mnav-rev-id.

2005-04-30  Nathaniel Smith  <njs@codesourcery.com>

	* monotone.texi (Database): Minor correction.

2005-04-30  Nathaniel Smith  <njs@codesourcery.com>

	* vocab.cc (trivially_safe_file_path): New function.
	(verify): Use it.
	(test_file_path_verification, test_file_path_normalization): Add a
	few more checks.

	* transforms.{cc,hh} (localized_as_string): New function.
	* {win32,unix}/inodeprint.cc (inodeprint_file): Use it, to avoid
	mkpath().

	* commands.cc (add_intermediate_paths): Hand-code intermediate
	path generator, taking advantage of normalization of file_path's,
	to avoid mkpath().

2005-04-29  Joel Rosdahl  <joel@rosdahl.net>

	* monotone.texi: Minor corrections.

2005-04-29  Nathaniel Smith  <njs@codesourcery.com>

	* commands.cc (ls_tags): Sort output.
	* tests/t_tags.at: Test that output is sorted.

2005-04-29  Derek Scherger  <derek@echologic.com>

	* commands.cc (struct file_itemizer): move to ...
	* work.hh (file_itemizer} ... here
	* work.cc (file_itemizer::visit_file} ... and here

2005-04-29  Emile Snyder  <emile@alumni.reed.edu>

	* annotate.cc (do_annotate_node): Stop doing expensive
	calculate_arbitrary_change_set when we already know we have parent
	and child revisions.  Cuts annotate run time in half.
	
2005-04-29  Nathaniel Smith  <njs@codesourcery.com>

	* commands.cc (update_inodeprints): Rename to...
	(refresh_inodeprints): ...this, so 'monotone up' continues to mean
	update.
	
	* monotone.texi (Inodeprints): Mention refresh_inodeprints in the
	Inodeprints section.
	
	* testsuite.at: 
	* tests/t_update_inodeprints.at: 
	* tests/t_refresh_inodeprints.at: 
	* monotone.texi (Working Copy, Commands): 
	* monotone.1: Update accordingly.

2005-04-29  Nathaniel Smith  <njs@codesourcery.com>
